--- a/about.html
+++ b/about.html
@@ -1,17 +1,27 @@
 ---
 layout: about
-title: About
+title: "About"
 ---
 
-<h2>About</h2>
+<h2>About(Beta)</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+    Welcome to the Nveloper's Note.<br>
+    최준원의 개발 노트에 오신 걸 환영합니다.<br>
+    崔埈源ノ 開發 ノト恚 來了ル 歡迎行二跢。<br>
 </p>
 
 <p>
-Hey, nice to meet you, you found this Jekyll theme. Here the yet another
-theme is a modern theme, and it's quite clear, clean and neat for writers
-and posts.
+    次 文書垠 理算府和 內事府ノ 合作以 作了跢。<br>
+    本 資料ノ 結成恚 對之 根據垠<br>
+    造則 第 25理決1, 25內決1恚序 確認行數有二跢。<br>
+</p>
+
+</p>
+    구현물 및 이력은 이곳에서 볼 수 있습니다.<br>
+    <a href="https://github.com/nveloper">GitHub Page | Nveloper의 깃허브 페이지</a><br>
+</p>
+
+</p>    
+    Deployed on May 7th 2025<br>
 </p>
